fixed vertical overflow on container

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@
   width: calc(100vw - 12rem);
   min-height: 100vh;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .container.horizontal {
